# TypingDrill

./: .gitignore  CMakeLists.txt  Color.hh  FontLoader.cc  FontLoader.hh  Game.cc  Game.hh  Makefile  README.md  Renderer.cc  Renderer.hh  Screen.hh  ScreenSize.cc  ScreenSize.hh  TextMaker.cc  TextMaker.hh  Texture.cc  Texture.hh  Window.cc  Window.hh  Word.cc  Word.hh  main.cc
assets/: words.txt
src/: Color.hh  FontLoader.cc  FontLoader.hh  Renderer.cc  Word.cc  Word.hh
